# sub2api

./: .gitignore  .goreleaser.yaml  AGENTS.md  CHANGES.md  Dockerfile  Dockerfile.goreleaser  Makefile  README.md  README_CN.md  config.yaml
.github/workflows/: backend-ci.yml  docker-build.yml  release.yml  security-scan.yml  sync-upstream.yml
backend/: .golangci.yml  Makefile  go.mod  go.sum
backend/cmd/server/: VERSION  main.go  wire.go  wire_gen.go
backend/ent/: mutation.go
backend/ent/migrate/: schema.go
backend/ent/runtime/: runtime.go
backend/internal/config/: config.go  config_test.go
backend/internal/domain/: constants.go
backend/internal/handler/: gateway_handler.go  gemini_v1beta_handler.go  handler.go  openai_gateway_handler.go  ops_error_logger.go  sora_gateway_handler_test.go  user_handler.go  wire.go
backend/internal/infrastructure/: database.go  redis.go  wire.go
backend/internal/model/: account.go  redeem_code.go  user.go
backend/internal/repository/: account_repo.go  account_repo_model_availability_test.go  claude_oauth_service.go  ops_repo.go  (+15 more)
deploy/: .env.example  README.md  config.example.yaml  docker-compose.yml  install.sh  sub2api-sudoers
frontend/: package-lock.json
mcp-server/: pyproject.toml  test_cli_runtime.py
mcp-server/sub2api_mcp/: __init__.py  __main__.py  app.py  cli.py  client.py  config.py  server.py  tool_catalog.py
mcp-server/sub2api_mcp/tools/: __init__.py  accounts.py  api_keys.py  dashboard.py  groups.py  misc.py  ops.py  proxies.py  settings.py  system.py  users.py
tools/: preflight_backend_ci.sh
(+162 files in other folders)
